--- a/app/views/file/modalImages.scala.html
+++ b/app/views/file/modalImages.scala.html
@@ -179,7 +179,7 @@
             var image = $('<img/>')
                 .addClass('img-responsive')
                 .prop('src', file.url)
-                .prop('alt', file.name)
+                .prop('alt', file.name);
 
             if(isNew) {
                 var newIcon = $('<div class="icon-new"></div>');
