--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -14,7 +14,7 @@
     <script src="@routes.Assets.versioned("js/app/startpage.js")"></script>
 }
 
-@main(Messages("startpage.title"), footerScripts = scripts.asInstanceOf[play.twirl.api.Html]) {
+@main(Messages("startpage.title"), footerScripts = scripts) {
 
     <div class="container maincontent-container">
 
