--- a/app/views/mails/mainMail.scala.html
+++ b/app/views/mails/mainMail.scala.html
@@ -11,9 +11,9 @@
         <style>
             @@media screen and (max-width: 768px) {
                 .content-table {border-collapse:collapse;overflow:hidden;}
-                .mail-col-1 {width:100% !important;padding-left:0px !important;padding-right:0px !important;display:block;clear:both;position:relative;}
+                .mail-col-1 {width:100% !important;padding-left:0 !important;padding-right:0 !important;display:block;clear:both;position:relative;}
                 .mail-col-2 {text-align:center !important;max-width:none !important;width:100% !important;display:block;clear:both;position:relative;}
-                .logo {border:0px !important;max-width:60px !important;}
+                .logo {border:0 !important;max-width:60px !important;}
             }
         </style>
     </head>
@@ -24,7 +24,7 @@
                 <td align="center" valign="top" bgcolor="#f0f0f0" style="background:#ffffff;font-size:14px;">
                     <table class="content-table" width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" style="width:100%;font-family:helvetica,arial,verdana,sans-serif;">
                         <tr>
-                            <td class="mail-col-1" width="75%" valign="top" style="width:75%;vertical-align:top;text-align:left;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:10px;">
+                            <td class="mail-col-1" width="75%" valign="top" style="width:75%;vertical-align:top;text-align:left;padding:20px 10px 20px 20px;">
                                 <div style="margin-right:10px;margin-left:20px;">@content</div>
                             </td>
                             <td class="mail-col-2" width="25%" valign="top" style="width:25%;vertical-align:top;text-align:right;max-width:300px;">
