--- a/app/views/helper/inputCheckboxGroup2.scala.html
+++ b/app/views/helper/inputCheckboxGroup2.scala.html
@@ -21,7 +21,7 @@
 @helper.input(field, args:_*) { (id, name, value, htmlArgs) =>
 @*helper.input(field, args.map{ x => if(x._1 == '_label) '_name -> x._2 else x }:_*) { (id, name, value, htmlArgs) => *@
     <span class="buttonset" id="@id">
-    @defining(field.indexes.map( i => field("[%s]".format(i)).value ).flatten.toSet) { values =>
+    @defining(field.indexes.flatMap(i => field("[%s]".format(i)).value).toSet) { values =>
         @options.map { v =>
             <input type="checkbox" id="@(id)_@v._1" name="@{name + "[]"}" value="@v._1" @if(values.contains(v._1)){checked="checked"} @play.api.templates.PlayMagic.toHtmlArgs(htmlArgs)>
             <label for="@(id)_@v._1">@v._2</label>
