--- a/app/views/helper/inputRadioGroup2.scala.html
+++ b/app/views/helper/inputRadioGroup2.scala.html
@@ -20,7 +20,7 @@
 @helper.input(field, args:_*) { (id, name, value, htmlArgs) =>
         <span class="buttonset" id="@id">
         @options.map { v =>
-            <input type="radio" id="@(id)_@v._1" name="@name" value="@v._1" @(if(value == Some(v._1)) "checked" else "") @play.api.templates.PlayMagic.toHtmlArgs(htmlArgs)>
+            <input type="radio" id="@(id)_@v._1" name="@name" value="@v._1" @(if(value.contains(v._1)) "checked" else "") @play.api.templates.PlayMagic.toHtmlArgs(htmlArgs)>
             <label for="@(id)_@v._1">@v._2</label>
         }
     </span>
