Added warning-texts in admin

--- a/app/views/admin/release/index.scala.html
+++ b/app/views/admin/release/index.scala.html
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("admin.release.index.header")</h1>
+            <p>@Messages("admin.release.index.text")</p>
             <div class="btn-group">
                 <a href="@controllers.admin.routes.AdminReleaseController.createDefaultData()" class="btn btn-primary">@Messages("admin.release.actions.releaserun")</a>
             </div>
